// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspiration - 'populære' should sort before 'nyeste' in 'fiction' 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - Empty subCategories array returns all subCategories in 'fiction' 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - get both 'nyeste' and 'populære' in 'fiction' and 'games' 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:52557240",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:06162533",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:61629475",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:62413344",
                  },
                },
              ],
              "title": "nyeste",
            },
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:45938247",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:28505000",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "games",
          "type": "GAMES",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - no categories returned when filters prop is empty 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [],
    },
  },
}
`;

exports[`Inspiration - no categories returned when filters prop is missing 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [],
    },
  },
}
`;

exports[`Inspiration - no subCategories prop returns all subCategories in 'games' 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:61629475",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:62413344",
                  },
                },
              ],
              "title": "nyeste",
            },
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:45938247",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:28505000",
                  },
                },
              ],
              "title": "populære",
            },
          ],
          "title": "games",
          "type": "GAMES",
        },
      ],
    },
  },
}
`;

exports[`Inspiration - only get 'nyeste' in 'fiction' 1`] = `
Object {
  "data": Object {
    "inspiration": Object {
      "categories": Array [
        Object {
          "subCategories": Array [
            Object {
              "result": Array [
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:04778502",
                  },
                },
                Object {
                  "work": Object {
                    "titles": Object {
                      "main": Array [
                        "Dummy Some Title",
                      ],
                    },
                    "workId": "work-of:870970-basis:134131039",
                  },
                },
              ],
              "title": "nyeste",
            },
          ],
          "title": "fiction",
          "type": "FICTION",
        },
      ],
    },
  },
}
`;
